examples/type_system/failing/180_type_adt_missing_assign.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

type Maybe<T> Some(T) | None
let after = 1
